CHANGES
=======

3.0a1 (2024-12-27)
------------------

- Source was moved to src/ and Python version support was changed to 3.9+
  (#110).

2.4.0 (2023-01-19)
------------------

- Package is marked as Python 3 only, two instances of "%" string formatting
  are replaced by f-strings (#96).

2.4b1 (2023-01-18)
------------------

- Elimination of Python 2/3 compatibility code in __gt__ (#94).
- Addition of optional keyword arguments for __new__, solving an issue with
  Dask (#92).
- Addition of some type hints for float arguments and return types (#87).
- Python version support is now 3.7-3.11 (#82).
- Faster __new__ and from_gdal methods (#78).

2.3.1 (2022-03-24)
------------------

Bug fixes:

- Return NotImplemented for both ValueError and TypeError in __mul__ to support
  fallback to __rmul__ in more cases (gh-71).

2.3.0 (2019-09-04)
------------------

Deprecations:

- Right multiplication like vector * matrix is deprecated and will raise
  AffineError in version 3.0.0.

Bug fixes:

- Change signature of Affine constructor to help users of PyCharm (#45).
- The Affine class docstring has been improved.

2.2.2 (2018-12-20)
------------------
- Affine.itransform computed the wrong results for arrays with rotation or
  shear (#40). This is fixed (#41).

2.2.1 (2018-06-04)
------------------
- Docstring improvements (#37).

2.2.0 (2018-03-20)
------------------
- Addition of permutation matrix (#35).

2.1.0 (2017-07-12)
------------------
- Addition of new ``eccentricity`` and ``rotation_angle`` properties (#28).

2.0.0.post1 (2016-05-20)
------------------------
- This is the final 2.0.0 release. The post-release version segment is used
  because we accidentally uploaded a 2.0.0 to PyPI before the beta releases
  below.

2.0b2 (2016-05-16)
------------------
- Bug fix: restore ``Affine __rmul__`` even though it permits dubious
  vector * matrix expressions (#27).

2.0b1 (2016-05-16)
------------------